Adicionado validação em todos os campos do form

--- a/css/index.css
+++ b/css/index.css
@@ -131,7 +131,7 @@ button:disabled {
 .campo-invalido {
   border: 1px solid red;
 }
-#mensagem-erro {
+#mensagens-erro {
   color: red;
 }
 .paciente-invalido {
