Adicionado campo de busca

--- a/css/index.css
+++ b/css/index.css
@@ -141,3 +141,11 @@ button:disabled {
   opacity: 0;
   transition: 0.7s;
 }
+#filtrar-tabela {
+  width: 200px;
+  height: 35px;
+  margin-bottom: 10px;
+}
+.invisible {
+  display: none;
+}
